CheckPoint - cgf4cc1bc3

--- a/android_frontend/gradle.properties
+++ b/android_frontend/gradle.properties
@@ -4,3 +4,6 @@
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Compose compiler version for Compose 1.6.x with Kotlin 2.0.21
+kotlin.compiler.extension.compose.version=1.6.1
